kube/railsapp/rails_app_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  labels:
    app: $APP_NAME
    tier: apps
spec:
  replicas: $APP_INSTANCES
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: $APP_NAME
      tier: apps
  template:
    metadata:
      labels:
        app: $APP_NAME
        tier: apps
    spec:
      imagePullSecrets:
        - name: regcred
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: $APP_NAME
              topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        tier: $APP_TIER
      containers:
        - name: $APP_NAME
          image: '$DOCKER_USERNAME/$APP_NAME:latest'
          imagePullPolicy: Always
          #command: ["sleep", "infinity"]
          ports:
            - containerPort: $APP_PORT
          resources:
            requests:
              memory: $APP_MEM_REQUEST
              cpu: $APP_CPU_REQUEST
            limits:
              memory: $APP_MEM_LIMIT
              cpu: $APP_CPU_LIMIT
          volumeMounts:
            - name: pki
              mountPath: "/etc/pki"
              readOnly: true
            - name: aws
              mountPath: "/home/app/.aws"
              readOnly: true
      volumes:
        - name: config
          configMap:
            defaultMode: 0600
            name: filebeat-config
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: varlog
          hostPath:
            path: /var/log
        - name: pki
          secret:
            secretName: elasticsearch-es-http-certs-internal
        - name: aws
          secret:
            secretName: aws
