kube/railsapp/worker_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME-worker
  labels:
    app: $APP_NAME-worker
spec:
  replicas: $WORKER_INSTANCES
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: $APP_NAME-worker
  template:
    metadata:
      labels:
        app: '$APP_NAME-worker'
    spec:
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        tier: $WORKER_TIER
      containers:
      - name: '$APP_NAME-worker'
        image: '$DOCKER_USERNAME/$APP_NAME:latest'
        imagePullPolicy: Always
        command: ["bundle", "exec", "$WORKER_CMD"]
        resources:
          requests:
            memory: $WORKER_MEM_REQUEST
            cpu: $WORKER_CPU_REQUEST
          limits:
            memory: $WORKER_MEM_LIMIT
            cpu: $WORKER_CPU_LIMIT
        volumeMounts:
          - name: pki
            mountPath: "/etc/pki"
            readOnly: true
          - name: aws
            mountPath: "/home/app/.aws"
            readOnly: true
      volumes:
        - name: config
          configMap:
            defaultMode: 0600
            name: filebeat-config
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: varlog
          hostPath:
            path: /var/log
        - name: pki
          secret:
            secretName: elasticsearch-es-http-certs-internal
        - name: aws
          secret:
            secretName: aws
