kube/railsapp/rails_app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: '$APP_NAME-service'
spec:
  ports:
    - port: $APP_PORT
  selector:
    app: '$APP_NAME'
    tier: apps
